@@ -3594,15 +3594,20 @@ class tslib_cObj {
 		$afterstring = trim($options[1]);
 		$crop2space = trim($options[2]);
 		if ($chars) {
-			if (strlen($content) > abs($chars)) {
+			if ($GLOBALS['TSFE']->csConvObj->strlen($GLOBALS['TSFE']->renderCharset, $content) > abs($chars)) {
+				$truncatePosition = FALSE;
 				if ($chars < 0) {
 					$content = $GLOBALS['TSFE']->csConvObj->substr($GLOBALS['TSFE']->renderCharset, $content, $chars);
-					$trunc_at = strpos($content, ' ');
-					$content = ($trunc_at && $crop2space) ? $afterstring . substr($content, $trunc_at) : $afterstring . $content;
+					if ($crop2space) {
+						$truncatePosition = strpos($content, ' ');
+					}
+					$content = ($truncatePosition) ? $afterstring . substr($content, $truncatePosition) : $afterstring . $content;
 				} else {
 					$content = $GLOBALS['TSFE']->csConvObj->substr($GLOBALS['TSFE']->renderCharset, $content, 0, $chars);
-					$trunc_at = strrpos($content, ' ');
-					$content = ($trunc_at && $crop2space) ? substr($content, 0, $trunc_at) . $afterstring : $content . $afterstring;
+					if ($crop2space) {
+						$truncatePosition = strrpos($content, ' ');
+					}
+					$content = ($truncatePosition) ? substr($content, 0, $truncatePosition) . $afterstring : $content . $afterstring;
 				}
 			}
 		}
