@@ -1,3 +1,7 @@
+2011-02-10  Christian Kuhn  <lolli@schwarzbu.ch>
+
+	* Fixed bug #12230: Function tslib_cObj::crop() is not fully multibyte safe (Thanks to Vladimir Podkovanov)
+
 2011-02-09  Steffen Kamper  <steffen@typo3.org>
 
 	* Fixed bug #17501: User setup - pressing return creates installtool file
